# automated-tending-py

./: .gitignore  .travis.yml  LICENSE  README.rst  config.yaml  pyproject.toml  pytest.ini  setup.py
emmerich_atm/: __main__.py  app.py  config.py  state.py  stepper.py
emmerich_atm/devices/: stepper.py
emmerich_atm/mechanisms/: finger_positioning.py
emmerich_atm/signals/: finger_movement.py
emmerich_atm/ui/: main_window.py
emmerich_atm/utils/: enum.py  singleton.py  window.py
tests/: test_config.py  test_state.py
tests/devices/: test_stepper.py
tests/mechanisms/: test_finger_movement.py
tests/utils/: mock_config.py  mock_signal.py
ui/: app.ui
