[tool.poetry]
name = "automated-tending-machine"
version = "0.0.1"
description = ""
authors = ["Ray Andrew <raydreww@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
briefcase = "^0.2.10"
PySide2 = "^5.13.1"
qtpy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
